More changes inpired by output from "findbugs"